# finalproject_stat386

./: TechnicalReport.qmd  Tutorial.qmd  index.qmd
Website/: TechnicalReport.qmd  Tutorial.quarto_ipynb  index.qmd
Website/docs/: Documentation.html  TechnicalReport.html  Tutorial.html  index.html  search.json
data/: MappingAmerica_Education.xlsx  MappingAmerica_Environment.xlsx  MappingAmerica_HDI.xlsx  MappingAmerica_Housing.xlsx  US_Locations.csv
docs/: TechnicalReport.html  index.html  search.json
streamlit_app/: app.py  final_data_set.csv  pyproject.toml
